# ChangeLog for perl-core/IO-Compress
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/IO-Compress/ChangeLog,v 1.39 2011/05/12 17:19:58 tove Exp $

*IO-Compress-2.35.0 (12 May 2011)

  12 May 2011; Torsten Veller <tove@gentoo.org> +IO-Compress-2.35.0.ebuild:
  Version bump

  02 May 2011; Fabian Groffen <grobian@gentoo.org> IO-Compress-2.33.ebuild:
  Marked ~x64-freebsd

  17 Jan 2011; Torsten Veller <tove@gentoo.org> -IO-Compress-2.021.ebuild,
  -IO-Compress-2.025.ebuild, -IO-Compress-2.026.ebuild,
  -IO-Compress-2.027.ebuild, -IO-Compress-2.030.ebuild:
  Cleanup

*IO-Compress-2.33 (13 Jan 2011)

  13 Jan 2011; Torsten Veller <tove@gentoo.org> +IO-Compress-2.33.ebuild:
  Version bump

  22 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  IO-Compress-2.024.ebuild:
  ppc64 stable wrt #333421

  22 Oct 2010; Jeroen Roovers <jer@gentoo.org> IO-Compress-2.024.ebuild:
  Stable for HPPA (bug #333421).

  12 Sep 2010; Raúl Porcel <armin76@gentoo.org> IO-Compress-2.024.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #333421

  23 Aug 2010; Markus Meier <maekke@gentoo.org> IO-Compress-2.024.ebuild:
  arm stable, bug #333421

  23 Aug 2010; Mike Frysinger <vapier@gentoo.org> IO-Compress-2.021.ebuild,
  IO-Compress-2.024.ebuild, IO-Compress-2.025.ebuild, IO-Compress-2.026.ebuild,
  IO-Compress-2.027.ebuild, IO-Compress-2.030.ebuild:
  Add proper blockers to old split packages #274443.

  20 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  IO-Compress-2.024.ebuild:
  stable x86, bug 333421

  19 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  IO-Compress-2.024.ebuild:
  Stable on amd64 wrt bug #333421

*IO-Compress-2.030 (26 Jul 2010)

  26 Jul 2010; Torsten Veller <tove@gentoo.org> +IO-Compress-2.030.ebuild:
  Version bump

*IO-Compress-2.027 (25 Apr 2010)

  25 Apr 2010; Torsten Veller <tove@gentoo.org> +IO-Compress-2.027.ebuild:
  Version bump

*IO-Compress-2.026 (08 Apr 2010)
