@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/IO-Compress
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/IO-Compress/ChangeLog,v 1.39 2011/05/12 17:19:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/IO-Compress/ChangeLog,v 1.40 2011/06/21 12:52:05 tove Exp $
+
+*IO-Compress-2.36.0 (21 Jun 2011)
+
+  21 Jun 2011; Torsten Veller <tove@gentoo.org> +IO-Compress-2.36.0.ebuild:
+  Version bump
 
 *IO-Compress-2.35.0 (12 May 2011)
 
